CSS issues fixed with check box hover effect
App awaiting refactoring and awaiting style edits, including the lack
of overlap of the white 1px border + grey 1px border above and below
each todo.

--- a/css/main.css
+++ b/css/main.css
@@ -19,7 +19,7 @@ legend {
 
 fieldset {
     margin: 40px auto 0px;
-    width: 67%;
+    width: 67%; /* TODO: Edit this percentage */
     border: 0;
 }
 
@@ -50,10 +50,11 @@ input[type=text] {
     font-style: italic;
 }
 
-.container {
+.todos {
+    margin: 16px 0px;
+}
 
-    visibility: visible;
-    opacity: 1;
+/* .container {
     box-shadow: 
         0px -1px 0px #fff,
         0px -2px 0px #ccc,
@@ -101,25 +102,8 @@ input[type=text] {
     border: 1px solid #ccc;
 }
 
-.todo-label:hover input ~ .checkmark {
-    background-color: #ccc;
-}
-
-.todo-label input:checked ~ .checkmark {
-    background-color: #f8f8f8;
-}
-
-.checkmark:after {
-    content: "";
-    position: absolute;
-    display: none;
-}
-  
-.todo-label input:checked ~ .checkmark:after {
-    display: block;
-}
-
-.todo-label .checkmark:after {
+.container:hover input ~ .checkmark {
+    background: #f4f4f4;
     left: 7px;
     top: -1px;
     width: 10px;
@@ -131,14 +115,134 @@ input[type=text] {
     transform: rotate(45deg);
 }
 
-/***********************
-**** HELPER CLASSES*****
-***********************/
-.transition-visibility {
-    visibility: hidden;
-    opacity: 0;
-    transition: visibility 1.5s, opacity 1.5s ease-out;
+.todo-label:hover input ~ .checkmark::after {
+    left: 7px;
+    top: -1px;
+    width: 10px;
+    height: 20px;
+    border: solid #e47e30;
+    border-width: 0 6px 6px 0;
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
+} */
+
+.todo-text{
+    margin-left: 10px;
+    margin-top: 10px;
 }
+
+.checkmark {
+    margin-top: 10px;
+}
+
+/* CONTAINER NEEDS CONTAINER TO HANDLE PADDING */
+
+/* .todo-container {
+    box-shadow: 
+        0px -1px 0px #fff,
+        0px -2px 0px #ccc,
+        0px 1px 0px #ccc,
+        0px 2px 0px #fff;
+    width: 67%;
+    margin: 0 auto;
+    margin-top: 2px;
+    padding-top: 10px;
+    height: 50px;
+    align-content: center;
+} */
+
+/* The container */
+.container {
+    display: block;
+    position: relative;
+
+    /* Recent additions from above */
+    box-shadow: 
+        0px -1px 0px #fff,
+        0px -2px 0px #ccc,
+        0px 1px 0px #ccc,
+        0px 2px 0px #fff;
+    width: 67%; /* TODO: Edit this value */
+    margin: 0 auto;
+    margin-bottom: 12px;
+    margin-top: 2px;
+    padding-top: 10px;
+    height: 50px;
+    align-content: center;
+
+    
+    padding-left: 35px;
+    /* margin-bottom: 12px; */
+    font-size: 22px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+  }
+  
+  /* Hide the browser's default checkbox */
+  .container input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+    height: 0;
+    width: 0;
+  }
+  
+  /* Create a custom checkbox */
+  .checkmark {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 30px;
+    width: 30px;
+    background-color: #f8f8f8;
+    box-shadow: 1px 1px 0px #c9c9c9;
+    border: 1px solid #ccc;
+
+  }
+  
+  /* On mouse-over, add a grey background color */
+  .container:hover input ~ .checkmark {
+    background-color: #f8f8f8;
+  }
+  
+  /* When the checkbox is checked, add a blue background */
+  .container input:hover ~ .checkmark{
+    cursor: default;
+  }
+
+  .todo-text:hover {
+    cursor: pointer;
+  }
+  
+  /* Create the checkmark/indicator (hidden when not checked) */
+  .checkmark:after {
+    content: "";
+    position: absolute;
+    display: none;
+  }
+  
+  /* Show the checkmark when hover and when focus */
+  .container input:hover ~ .checkmark:after,
+  .container input:focus ~ .checkmark:after {
+    display: block;
+  }
+  
+  /* Style the checkmark/indicator */
+  .container .checkmark:after {
+    cursor: pointer;
+    left: 7px;
+    top: -1px;
+    width: 10px;
+    height: 20px;
+    border: solid #e47e30;
+    border-width: 0 6px 6px 0;
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
+  }
 
 /***********************
 **** MEDIA QUERIES *****
